<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.mobileapps.lewisu.cassiepierson.scenictrails.FinalizeNewTrailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        android:text="@string/create_your_trail"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enter_trail_name_et"
        android:layout_marginBottom="20dp"
        android:hint="@string/enter_trail_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:id="@+id/enter_trail_desc_et"
        android:hint="@string/enter_trail_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total Distance: 3.2 miles"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="3"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:id="@+id/trail_rating_bar"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_picture"
        android:layout_gravity="center"
        android:id="@+id/add_pic_button"
        android:layout_marginBottom="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_new_trail"
        android:id="@+id/submit_new_trail_button"
        android:layout_gravity="center"/>

</LinearLayout>
