<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mobileapps.lewisu.cassiepierson.scenictrails.ReviewTrailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/review_trail"
        android:textSize="25sp"
        android:padding="20dp"
        android:id="@+id/tv_review_trail"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:layout_gravity="center"
        android:id="@+id/trail_rating_bar"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_think_you"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:id="@+id/what_think_trail"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/add_review"
        android:id="@+id/add_review_et"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:id="@+id/sub_rating_button"/>

</LinearLayout>
